# Reachy_gemini_with_facial_recognition

./: .env.example  .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml  reachy-mini.skill  style.css
reachy_mini_gemini_app/: __init__.py  gemini_handler.py  main.py  movements.py  pdf_indexer.py  web_server.py
src/reachy_mini_gemini_app/: gemini_handler.py  main.py  movements.py
