[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy_mini_gemini_app"
version = "0.1.0"
description = "Reachy Mini conversation app using Google Gemini Live API"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = ["reachy-mini", "gemini", "voice-assistant", "robot", "ai", "conversation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "reachy_mini",
    "google-genai>=1.0.0",
    "pyaudio",
    "numpy",
    "opencv-python",
    "scipy",
    "python-dotenv",
]

[project.optional-dependencies]
wireless = [
    "reachy_mini[gstreamer]",
]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
reachy-mini-gemini = "reachy_mini_gemini_app.main:main"

[project.entry-points."reachy_mini_apps"]
reachy_mini_gemini_app = "reachy_mini_gemini_app.main:ReachyMiniGeminiApp"

[tool.setuptools.packages.find]
include = ["reachy_mini_gemini_app*"]

[tool.pyright]
# The relative path to the parent directory containing the virtual environment
venvPath = ".." 

# The exact name of the virtual environment directory
venv = "reachy_mini_env"

# Force Pyright to read the source code of external libraries for type hints
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
